deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: demoapp
  labels: 
     app: demoapp

spec:
  replicas: 2 
  selector:
    matchLabels:
      app: demoapp

  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - name: demoapp
        image: sainathrachakonda/demoproj
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
