demoapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demoapp 
spec:
  selector:
    app: demoapp 

  ports:
    - port: 8080
      targetPort: 8080

  type: LoadBalancer
